# clipboard-history

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ClipboardHistory.vue  Settings.vue
src/components/settings/: AboutSettings.vue  BackupSettings.vue  ClipboardSettings.vue  GeneralSettings.vue  HistorySettings.vue  ShortcutSettings.vue
src/i18n/: index.ts
src/i18n/locales/: en.json  zh-CN.json
