[package]
name = "clipboard-history"
version = "0.1.0"
description = "A clipboard history tool"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.4", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-clipboard-manager = "2.2"
arboard = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
base64 = "0.22"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
enigo = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
